# MPQS

./: Cargo.toml  README.md
examples/: a_mpqs.rs
src/: algebra.rs  lib.rs  main.rs  memory_shared_MPQS.rs  message_MPQS.rs  parallel2_MPQS.rs  parallel_quadratic_sieve.rs  quadratic_sieve.rs  rabin_miller.rs  serial_MPQS.rs  tonelli_shank.rs  tonelli_shanks.rs
