[package]
name = "MPQS"
version = "0.1.0"
authors = ["luca <luca.all1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.2.1"
primal = "0.2.3"
primal-sieve = "0.2.9"
easybench = "0.1.4"
rand = "0.7.2"
rug = "1.6.0"
log = "0.4.8"
env_logger = "0.7.1"
num_cpus = "1.11.1"
crossbeam = "*"
crossbeam-channel = "0.4.0"
chashmap = "2.2.2"
