[package]
name = "MPQS"
version = "0.1.0"
authors = ["luca <luca.all1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primal-sieve = "0.2.9"
rand = "0.7.2"
rug = "1.6.0"
num_cpus = "1.11.1"
crossbeam = "*"
chashmap = "2.2.2"
clap = "2.33.0"
